...
                          ),
                        const SizedBox(
                          height: 10,
                        ),
                        CommonCardTile(
                          category: 'None',
                          title: const Text('View All Achievements'),
                          destination: AchievementsScreen(
                            userId: widget.friend?.userId,
                          ),
                          trailingWidget:
                              const Icon(Icons.arrow_forward_ios_rounded),
                        ),
...
